# distributed_suffix_sorting

./: CMakeLists.txt  README.md
src/executables/: cli.cpp
src/include/: dss_interface.hpp
src/mpi/: CMakeLists.txt
src/pdcx/: CMakeLists.txt
src/sorters/: CMakeLists.txt
src/strings/: CMakeLists.txt
src/util/: CMakeLists.txt  uint_types.hpp
